src/objects/Named_Product_Family__c.object
<CustomObject>
    <description>This custom object shall be used to leverage All product families of E and Z</description>
    <fields>
        <fullName>Is_Service_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether Product is a Service Product or not.</description>
        <label>Is Service Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family_Description__c</fullName>
        <description>Holds the description of Product Family</description>
        <label>Product Family Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family_Source__c</fullName>
        <description>Identifies if a Product family is a MSI E (EVM)  or Zebra ( PTZ.)</description>
        <label>Product Family Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Named Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family_Description__c</columns>
        <columns>Product_Family_Source__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Is_Service_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Named Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Named Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>